<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/grey"
    >
<TextView 
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/cats"
	android:textSize="22dp"
	android:gravity="center"
	android:textColor="@color/white"
	android:background="@color/blue"
	>
	</TextView>
	
  <Button
  	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:id="@+id/world"
	android:text="@string/world"
	></Button>
	 <Button
  	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:id="@+id/india"
	android:text="@string/india"
	></Button>
	 <Button
  	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:id="@+id/sports"
	android:text="@string/sports"
	></Button>
	
	 <Button
  	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:id="@+id/stock"
	android:text="@string/stock"
	></Button>
	 <Button 
	 android:layout_height="wrap_content" 
	 android:textColor="@color/blue" 
	 android:layout_width="fill_parent" 
	 android:id="@+id/savecat" 
	 android:text="@string/savecat"></Button>
	
	<Button 
	 android:layout_height="wrap_content" 
	 android:textColor="@color/blue" 
	 android:layout_width="fill_parent" 
	 android:id="@+id/viewsaved" 
	 android:text="@string/viewsaved"></Button>
	 <Button 
	 android:layout_height="wrap_content" 
	 android:textColor="@color/blue" 
	 android:layout_width="fill_parent" 
	 android:id="@+id/quicknews" 
	 android:text="@string/quicknews"></Button>
	
</LinearLayout>
