<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/grey"
    >
<TextView 
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/newcat"
	android:textSize="22dp"
	android:gravity="center"
	android:textColor="@color/white"
	android:background="@color/blue"
	>
	</TextView>
	
<TextView 
	android:text="Name:" 
	android:textSize="15dp"
	android:textStyle="bold"
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:textColor="@color/blue">
	</TextView>
<EditText 
	android:id="@+id/catname" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content" 
	>
	</EditText>
<TextView 
	android:text="RSS URL:" 
	android:textSize="15dp"
	android:textStyle="bold"
 	android:layout_width="fill_parent"  
 	android:layout_height="wrap_content"
 	android:textColor="@color/blue">
 	 </TextView>
<EditText 
	android:id="@+id/caturl" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content" 
	>
	</EditText>
<Button 
	android:text="@string/savecategory" 
	android:id="@+id/bsavecat" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content">
	</Button>
<Button 
	android:text="@string/cancel" 
	android:id="@+id/bcancel" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content">
	</Button>
 


  
</LinearLayout>
